--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
         <!-- <link rel="stylesheet" href="css/01.css" /> -->
         <!-- <link rel="stylesheet" href="css/02.css" /> -->
         <!-- <link rel="stylesheet" href="css/03.css" /> -->
-        <link rel="stylesheet" href="css/04.css" />
+        <!-- <link rel="stylesheet" href="css/04.css" /> -->
+        <!-- <link rel="stylesheet" href="css/05.css" /> -->
+        <!-- <link rel="stylesheet" href="css/06.css" /> -->
+        <!-- <link rel="stylesheet" href="css/07.css" /> -->
+        <!-- <link rel="stylesheet" href="css/08.css" /> -->
+        <!-- <link rel="stylesheet" href="css/09.css" /> -->
+        <!-- <link rel="stylesheet" href="css/10.css" /> -->
+        <link rel="stylesheet" href="css/11.css" />
     </head>
     <body>
         <div class="caja-curso">
@@ -77,11 +84,34 @@
             </div>
 
             <h2>Imágenes Responsive</h2>
-            <img src="img/imagen.jpg" alt="imagen responsive" />
+            <!-- <img src="img/imagen.avif" alt="imagen responsive" /> -->
+            <p>Hola</p>
 
             <h2>Formatos Modernos</h2>
 
+            <!-- <picture>
+                <source srcset="img/imagen.avif" type="image/avif" />
+                <source srcset="img/imagen.webp" type="image/webp" />
+                <img src="img/imagen.jpg" alt="imagen responsive" />
+            </picture> -->
+
             <h2>Formatos Modernos con SRC SET</h2>
+
+            <picture>
+                <source
+                    sizes="1920w, 1280w, 640w"
+                    srcset="img/imagen.avif 1920w, img/imagen-1000.avif 1280w, img/imagen-700.avif 640w"
+                    type="image/avif" />
+                <source
+                    sizes="1920w, 1280w, 640w"
+                    srcset="img/imagen.webp 1920w, img/imagen-1000.webp 1280w, img/imagen-700.webp 640w"
+                    type="image/webp" />
+                <source
+                    sizes="1920w, 1280w, 640w"
+                    srcset="img/imagen.jpg 1920w, img/imagen-1000.jpg 1280w, img/imagen-700.jpg 640w"
+                    type="image/jpg" />
+                <img loading="lazy" src="img/imagen.jpg" alt="imagen responsive" />
+            </picture>
         </div>
     </body>
 </html>
